file-paths switched

--- a/resources.html
+++ b/resources.html
@@ -22,13 +22,13 @@
     <header>
 
     <nav>
-        <a href="index.html"> Blog </a>
+        <a href="blog.html"> Blog </a>
         <a href="about.html"> The Story </a>
         <a href="resources.html"> Additional Resources </a>
         <a href="contact.html"> Contact </a>
     </nav>
     <h1 class="allpageheader">
-      <a href="home.html"> project : Thyme </a>
+      <a href="index.html"> project : Thyme </a>
     </h1>
 
   </header>
