--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <section class=aboutcontainer>
       <div class="abouttextsection">
         <p class="abtext">breathe: to pause, as for breath; to take rest<p>
-        <p class="abtext">breathe is an environment dedicated to essential need to pause and take in the beauty of moments that we stumble upon, yet that often go unnoticed.
+        <p class="abtext">project : Thyme is an environment dedicated to essential need to pause and take in the beauty of moments that we stumble upon, yet that often go unnoticed.
         </p>
         <p class="abtext">However, this site is also dedicated to helping readers to explore the English language in an informal setting. Develop a community, rely on each other and strengthen each other through a positive outlook on taking time away from stress and anxiety.
         </p>
