--- a/resources.html
+++ b/resources.html
@@ -45,22 +45,25 @@
           </blockquote>
         </div>
         <div class="resourcecontainer">
-        <h2 class="resourcelistheader"> Grammar Resources </h2>
-        <ul>
-          <li><a class="resourcelinks" href="https://www.englishgrammar101.com/">English Grammar 101</a></li>
-          <li><a class="resourcelinks" href="http://learnenglish.britishcouncil.org/learnenglish-podcasts">Elementary Podcasts by the British Council</a></li>
-          <li><a class="resourcelinks" href="https://teacherluke.co.uk/">Luke's English Podcast</a></li>
-          <li><a class="resourcelink" href="https://www.bbc.co.uk/programmes/p02pc9zn/episodes/downloads">The English We Speak</a></li>
-        </ul>
+          <div class="rescatcontainer1">
+          <h2 class="resourcelistheader"> Grammar Resources </h2>
+            <ul>
+              <li><a class="resourcelinks" href="https://www.englishgrammar101.com/">English Grammar 101</a></li>
+              <li><a class="resourcelinks" href="http://learnenglish.britishcouncil.org/learnenglish-podcasts">Elementary Podcasts by the British Council</a></li>
+              <li><a class="resourcelinks" href="https://teacherluke.co.uk/">Luke's English Podcast</a></li>
+              <li><a class="resourcelink" href="https://www.bbc.co.uk/programmes/p02pc9zn/episodes/downloads">The English We Speak</a></li>
+            </ul>
+          </div>
+        <div class="rescatcontainer2">
         <h2 class="resourcelistheader"> Mindfulness Resources </h2>
-        <ul>
-          <li><a class="resourcelinks" href="https://podcasts.apple.com/au/podcast/oprahs-supersoul-conversations/id1264843400?mt=2">Oprah's Supersoul Conversations</a></li>
-          <li><a class="resourcelinks" href="https://podcasts.apple.com/au/podcast/happier-with-gretchen-rubin/id969519520?mt=2">Happier With Gretchen Rubin</a></li>
-          <li><a class="resourcelinks" href="https://www.intelligentchange.com/products/the-five-minute-journal">5-Minute Journal</a></li>
-          <li><a class="resourcelink" href="https://apps.apple.com/us/app/10-happier-guided-meditation/id992210239">10% Happier</a></li>
-        </ul>
-      </div>
-        <br>
+            <ul>
+              <li><a class="resourcelinks" href="https://podcasts.apple.com/au/podcast/oprahs-supersoul-conversations/id1264843400?mt=2">Oprah's Supersoul Conversations</a></li>
+              <li><a class="resourcelinks" href="https://podcasts.apple.com/au/podcast/happier-with-gretchen-rubin/id969519520?mt=2">Happier With Gretchen Rubin</a></li>
+              <li><a class="resourcelinks" href="https://www.intelligentchange.com/products/the-five-minute-journal">5-Minute Journal</a></li>
+              <li><a class="resourcelink" href="https://apps.apple.com/us/app/10-happier-guided-meditation/id992210239">10% Happier</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </main>
     <div class="push"></div>
